--- a/ss.conf
+++ b/ss.conf
@@ -8,7 +8,7 @@ Proxy = custom, 106.185.35.121, 8888, aes-256-cfb, ggyyLu0102, http://106.185.35
 
 
 // DNS OVERRIDE, REMOVE # IF YOU NEED
-# dns-server = 223.6.6.6,223.5.5.5,114.114.114.114,114.114.115.115
+dns-server = 223.6.6.6,223.5.5.5,114.114.114.114,114.114.115.115
 
 [Rule]
 
