--- a/ss.conf
+++ b/ss.conf
@@ -4,7 +4,7 @@ skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12,127.0.0.0/24,100.64.0.0/1
 bypass-tun = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12,127.0.0.0/24,100.64.0.0/10
 
 [Proxy]
-Proxy = custom, 106.185.35.121, 8888, aes-256-cfb, ggyyLu0102, http://106.185.35.121/ss.module
+Proxy = custom, your_url_or_ip, your_port, aes-256-cfb, your_pass, http://your_url/ss.module
 
 
 // DNS OVERRIDE, REMOVE # IF YOU NEED
